--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "type": "module",
   "module": "./src/index.ts",
   "dependencies": {
+    "@stdlib/random-base-mt19937": "^0.1.0",
     "core-js": "^3.33.3"
   },
   "devDependencies": {
